<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rob_pc.fypbelaytionship.RegisterActivity"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/etPassword"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/etPassword"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/etUserName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bLogin"
        android:layout_alignStart="@+id/bLogin"
        android:layout_below="@+id/etUserName"
        android:ems="10"
        android:hint="@string/etPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bLogin"
        android:layout_width="110dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etPassword"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:text="@string/bLogin" />


    <Button
        android:id="@+id/bRegister"
        android:layout_width="156dp"
        android:layout_height="34dp"
        android:layout_alignLeft="@+id/bLogin"
        android:layout_alignStart="@+id/bLogin"
        android:layout_below="@+id/bLogin"
        android:text="@string/bRegister" />

</RelativeLayout>
